--- a/README.rdoc
+++ b/README.rdoc
@@ -266,19 +266,37 @@ vendor
   + to incidents, to statics.
   + date/incidents redirect?
 
++ Find and replace Minor Major and Critical in the sumary and location details fields with “minor “ etc. uncapitalising and adding a space after. localhost:3000/data/incidents/43030 .
+
++ add to location model ,summary, address
+
 + Filters
 	+ Reorder types and locations
 	+ add the logic for automatically adding the :start_date and :end_date params
 	+	example
 		:	localhost:3000/incidents?incident_type=&location=&start_date=&end_date=&has_detail_report=true
+	+ order by
 
 + Model
 	+ investigations
+		+ url
+		+ title
+		+ id
+		+ summary
+		+ body
+		+ related incidents
 	+ resources
+		+ url
+		+ title
+		+ id
+		+ summary
+		+ related incidents
 	+ glossary
-
 + Authentication
 
++ Incidents
+	+ remove details initial animation
+	+ fix link to the incident from index
 + design about
 + design resources
 + design home
