--- a/README.rdoc
+++ b/README.rdoc
@@ -272,12 +272,14 @@ vendor
 
 + add download data as .cvs
 
-+ Filters
++ Filters	
 	+ add the logic for automatically adding the :start_date and :end_date params
 	+	example
 		:	localhost:3000/incidents?incident_type=&location=&start_date=&end_date=&has_detail_report=true
 	+ order by
 	+ Sticky head_row
+	+ results url box
+	+ fix the browser font-size difference
 
 + Model
 	+ investigations
