--- a/README.rdoc
+++ b/README.rdoc
@@ -260,56 +260,69 @@ vendor
   subdirectory. If the app has frozen rails, those gems also go here, under
   vendor/rails/. This directory is in the load path.
 
-## To Do
+== To Do
 
-+ establish urls
-  + to statics.
-  	+ /about
-  	+ /about/principles
-  	+ /about/glossary
-  	+ /about/resources
-  	
-  + 404 page
-  	
-  + date/incidents redirect **this needs to be checked on the live site, seems to have issue leaving first "/" off before "data".
+- [ ] Check detail report uploader is working, seems to be failing.
 
-+ Find and replace Minor Major and Critical in the sumary and location details fields with “minor “ etc. uncapitalising and adding a space after. localhost:3000/data/incidents/43030 .
+- [ ] template about
+- [ ] template resources
+- [ ] template home
 
-+ add to location model ,summary, address
+- [ ] Authentication
 
-+ add download data as .cvs
 
-+ Incident-Exporer
-	+ Filters	
-		+ add the logic for automatically adding the :start_date and :end_date params
-		+	example = localhost:3000/incidents?incident_type=&location=&start_date=&end_date=&has_detail_report=true
-		+ add url params to the form so people can link to results.
-			+ order by
-			+ Sticky head_row
-		+ Return incidents by defaul newset first, currently oldest first.
+=== establish urls
 
-+ Model
-	+ investigations
-		+ url
-		+ title
-		+ id
-		+ summary
-		+ body
-		+ related incidents
-	+ resources
-		+ url
-		+ title
-		+ id
-		+ summary
-		+ related incidents
-	+ glossary
-+ Authentication
+- [ ] /about
+- [ ] /about/principles
+- [ ] /about/glossary
+- [ ] /about/resources
+- [ ] 404 page
+- [ ] /data/incidents redirect **this needs to be checked on the live site, seems to have issue leaving first "/" off before "data", e.g. http://detentionlogs.com.au/incidents/
 
-+ Incidents
-	+ Incident uploader seems to be broken
-	+ add links to the type and date for seeing all incidents from those cats.
-	+ add previous and next incident links
+
+=== data
+
+- [ ] Find and replace Minor Major and Critical in the sumary and location details fields with “minor “ etc. uncapitalising and adding a space after. localhost:3000/data/incidents/43030 .
+
+
+=== Incident Exporer
+
+**Filters**
+
+example url = localhost:3000/incidents?incident_type=&location=&start_date=&end_date=&has_detail_report=true
+
+- [ ] Authentication add the logic for automatically adding the :start_date and :end_date params
+- [ ] add url params to the form so people can link to results.
+- [ ] Return incidents by defaut newset first
+		
+- [ ] order by
+- [ ] Sticky head_row
+
+
+=== Model
+
+
+- [x] add to location model ,summary, address
+- [x] add download all .json
+- [ ] add download data as .cvs
+
+
+**investigations**
+
+- [ ] url
+- [ ] title
+- [ ] id
+- [ ] summary
+- [ ] body
+- [ ] related incidents
 	
-+ design about
-+ design resources
-+ design home
+**resources**
+
+- [ ] url
+- [ ] title
+- [ ] id
+- [ ] summary
+- [ ] related incidents
+	
+**glossary**
