make microcopy on pagination more explicit

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,10 @@
 
 en:
   hello: "Hello world"
+  views:
+    pagination:
+      first: "&laquo; First page"
+      last: "Last page &raquo;"
+      previous: "&lsaquo; Prev page"
+      next: "Next page &rsaquo;"
+      truncate: "&hellip;"
